gccida/c1/do_jump_by_parts_greater_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10220:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10234:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10240:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10280:12: error: expected identifier or '('
 struct op = v14; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10284:31: error: invalid suffix 'orce' on integer constant
v17 = operand_sub*(short *)0xforce( op, v15, v13); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10284:7: error: use of undeclared identifier 'operand_sub'
v17 = operand_sub*(short *)0xforce( op, v15, v13); 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10285:31: error: invalid suffix 'orce' on integer constant
v18 = operand_sub*(short *)0xforce( v27, v15, v13); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10285:7: error: use of undeclared identifier 'operand_sub'
v18 = operand_sub*(short *)0xforce( v27, v15, v13); 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10289:70: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v17, v18, GT, ( v20 | v16) != 0, *(short *)0xmode, 0LL, 0LL, v28); 
                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/expr.c:10294:55: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v17, v22, NE, v9, *(short *)0xmode, 0LL, 0LL, v25); 
                                                      ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump_by_parts_greater_rtx/src/obj/expr.o] Error 1
